# esp_emote_expression

./: CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
.github/workflows/: upload_component.yml
include/: expression_emote.h
include/expression_emote/: emote.h  emote_assets.h  macro_configs.h
priv_include/: emote_assets.h  emote_defs.h  emote_layout.h
src/: emote_init.c  emote_init.h  emote_load.c  emote_load.h  emote_op.c  emote_op.h  emote_setup.c  emote_setup.h  emote_types.h
test_apps/: partitions.csv
test_apps/main/: CMakeLists.txt  idf_component.yml  main.c  mmap_generate_assets.h
